--- a/styleee/example.css
+++ b/styleee/example.css
@@ -135,3 +135,8 @@ hr{
 .dropdown:hover {
     background-color: transparent;
 } */
+ .vastuu-for-house{
+    display: inline-flex;
+    flex-direction: row-reverse;
+}
+ 
