--- a/styleee/form.css
+++ b/styleee/form.css
@@ -4,6 +4,7 @@ body { background:rgb(30,30,40); }
 form { max-width:420px; margin:50px auto; }
 
 .feedback-input {
+  background-color: antiquewhite;
   color:white;
   font-family: Helvetica, Arial, sans-serif;
   font-weight:500;
