--- a/styleee/style.css
+++ b/styleee/style.css
@@ -112,7 +112,7 @@ input:focus, textarea:focus, select:focus, button:focus {
 	padding-bottom:60px;
 }
 .ast_bottompadder70{
-	padding-bottom:70px;
+	padding-bottom:20px;
 }
 .ast_bottompadder80{
 	padding-bottom:80px;
@@ -1791,10 +1791,10 @@ input:focus, textarea:focus, select:focus, button:focus {
 /*---------- Testimonial css end -------*/
 /*---------- Download Wrapper css Start -------*/
 .ast_download_wrapper{
-    float: left;
+    /* float: left; */
     width: 100%;
     background-color: #f4f4f4;
-    margin-bottom: 678px;
+    margin-bottom: 426px;
 }
 .ast_download_box{
 	float:left;
